ci: update code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,6 +23,7 @@
 /hello-world-bot-with-tab @eriolchan @hund030
 /hello-world-in-meeting @eriolchan @JerryYangKai
 /hello-world-tab-codespaces @kimizhu @dooriya @qinezh
+/hello-world-tab-docker @eriolchan @hund030 @Yimin-Jin
 /hello-world-tab-with-backend @adashen @SLdragon @KennethBWSong
 /hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @jayzhang @HuihuiWu-Microsoft
 /incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
