build: update node version

--- a/intelligent-data-chart-generator/package.json
+++ b/intelligent-data-chart-generator/package.json
@@ -2,7 +2,7 @@
   "name": "intelligent-data-chart-generator",
   "version": "0.1.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18"
   },
   "private": true,
   "dependencies": {
