--- a/developer-assist-dashboard/package.json
+++ b/developer-assist-dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "dev-dashboard",
   "version": "0.1.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18"
   },
   "private": true,
   "dependencies": {
