--- a/developer-assist-dashboard/api/package.json
+++ b/developer-assist-dashboard/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-    "dev": "nodemon --exec func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
+    "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
     "build": "tsc",
     "watch:teamsfx": "tsc -w",
     "prestart": "npm run build",
@@ -21,7 +21,6 @@
     "@types/node": "^18.16.1",
     "@types/node-fetch": "^2.6.3",
     "env-cmd": "^10.1.0",
-    "nodemon": "^3.1.0",
     "typescript": "^4.4.4"
   },
   "main": "dist/src/functions/*.js"
