--- a/developer-assist-dashboard/api/package.json
+++ b/developer-assist-dashboard/api/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@azure/functions": "^1.2.2",
+    "@azure/functions": "^4.2.0",
     "@microsoft/teamsfx": "^2.0.0",
     "@microsoft/teams-js": "^2.7.1",
     "@octokit/core": "^4.2.0",
@@ -22,5 +22,6 @@
     "@types/node-fetch": "^2.6.3",
     "env-cmd": "^10.1.0",
     "typescript": "^4.4.4"
-  }
+  },
+  "main": "dist/src/functions/*.js"
 }
