--- a/intelligent-data-chart-generator/api/package.json
+++ b/intelligent-data-chart-generator/api/package.json
@@ -11,12 +11,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@azure/functions": "^3.5.1",
+    "@azure/functions": "^4.2.0",
     "@microsoft/teamsfx": "^2.3.0",
     "mssql": "^10.0.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "main": "dist/src/functions/*.js"
 }
