--- a/hello-world-tab-with-backend/api/package.json
+++ b/hello-world-tab-with-backend/api/package.json
@@ -17,7 +17,9 @@
     "@azure/functions": "^1.2.2",
     "@microsoft/teamsfx": "^2.0.0",
     "@microsoft/microsoft-graph-client": "^3.0.5",
-    "isomorphic-fetch": "^3.0.0"
+    "hpagent": "^1.2.0",
+    "isomorphic-fetch": "^3.0.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
