fix: teams chef bot sample config and thumbnail

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -493,8 +493,8 @@
             ],
             "time": "5min to run",
             "configuration": "Manual configurations required",
-            "thumbnailPath": "assets/thumbnail.png",
-            "gifPath": "assets/sampleDemo.gif",
+            "thumbnailPath": "assets/TeamsChef003.png",
+            "gifPath": "assets/TeamsChef003.png",
             "suggested": true
         },
         {
