update: add readme for proxy

--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
-    "proxy:teamsfx": "devproxy -p 54000 --as-system-proxy false -c proxy/graph.json -f 0  --mocks-file proxy/graph-mocks.json --record"
+    "proxy:teamsfx": "devproxy -p 54000 --as-system-proxy false -c proxy/graph.json -f 0 --record"
   },
   "eslintConfig": {
     "extends": [
