--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "typescript": "^4.1.2"
   },
