--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -11,6 +11,7 @@
     "@microsoft/teamsfx": "^2.2.0",
     "@microsoft/teamsfx-react": "^3.0.0",
     "axios": "^0.21.1",
+    "js-base64": "^3.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
