--- a/graph-toolkit-contact-exporter/package.json
+++ b/graph-toolkit-contact-exporter/package.json
@@ -14,6 +14,7 @@
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
     "axios": "^0.21.1",
+    "js-base64": "^3.7.7",
     "react": "^18.2.0",
     "react-csv": "^2.0.3",
     "react-dom": "^18.2.0",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "proxy:teamsfx": "devproxy -p 54000 --as-system-proxy false -c proxy/graph.json -f 0 --record"
   },
   "eslintConfig": {
     "extends": [
