--- a/graph-toolkit-contact-exporter/package.json
+++ b/graph-toolkit-contact-exporter/package.json
@@ -23,7 +23,8 @@
     "typestyle": "^2.1.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
