--- a/hello-world-tab-with-backend/api/package.json
+++ b/hello-world-tab-with-backend/api/package.json
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@azure/functions": "^1.2.2",
+    "@azure/functions": "^4.2.0",
     "@microsoft/microsoft-graph-client": "^3.0.5",
     "@microsoft/teamsfx": "^2.0.0",
     "hpagent": "^1.2.0",
@@ -22,8 +22,8 @@
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "typescript": "^4.4.4"
-  }
+  },
+  "main": "dist/src/functions/*.js"
 }
