--- a/teams-chef-bot/package.json
+++ b/teams-chef-bot/package.json
@@ -21,20 +21,23 @@
     },
     "dependencies": {
         "@microsoft/teams-ai": "~1.1.1",
-        "@microsoft/teamsfx": "^2.3.0",
         "botbuilder": "^4.22.1",
+        "botbuilder-dialogs": "^4.22.1",
         "dotenv": "^16.4.5",
         "replace": "~1.2.0",
         "restify": "~11.1.0",
-        "vectra": "^0.5.5"
+        "vectra": "^0.5.5",
+        "shx": "^0.3.4",
+        "openai": "4.28.4"
     },
     "devDependencies": {
         "@types/dotenv": "6.1.1",
-        "@types/restify": "8.5.12",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
-        "ts-node": "^10.9.2",
+        "@types/restify": "8.5.12",
         "env-cmd": "^10.1.0",
         "nodemon": "~1.19.4",
+        "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     }
 }
