--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -947,6 +947,7 @@
             "tags": [
               "TS",
               "React",
+              "Word",
               "Office Add-in"
             ],
             "time": "5 mins to run",
