--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -90,7 +90,7 @@
             "onboardDate": "2021-05-06",
             "title": "Todo List with SPFx",
             "shortDescription": "Todo List app hosting on SharePoint",
-            "fullDescription": "Todo List with SPFx is a Todo List for individuals to manage his/her personal to-do items. This app is hosted on Sharepoint. There is no requirements to deploy Azure resources.",
+            "fullDescription": "The \"Todo List with SPFx\" is a Microsoft Teams application that provides a collaborative task management tool for Teams or Channel members. The application is hosted on SharePoint, allowing users to create, update, and delete tasks within a shared Todo List. The main user scenario involves members of a Team or Channel collaborating on the same Todo List and manipulating the same set of Todo items. The application leverages SharePoint Framework (SPFx) for its development and uses Single Sign-On (SSO) for user authentication. It also utilizes the Microsoft Graph Toolkit for accessing and manipulating Microsoft Graph data. The application does not require an Azure account for deployment, instead, it is deployed to the SharePoint App Catalog and synced to the Teams App Catalog. The application is primarily a Tab application and is written in TypeScript.",
             "types": [
                 "Tab"
             ],
@@ -154,7 +154,7 @@
             "onboardDate": "2021-11-09",
             "title": "NPM Search Connector",
             "shortDescription": "Search and Share an NPM Package in Teams and Outlook (Web)",
-            "fullDescription": "NPM Search Connector is a Message Extension that runs across Microsoft 365 including Teams and Outlook (Web). It allows you to perform a quick search for a NPM package and insert package details into conversations for easy sharing. The front end is built with Adaptive Cards and the backend is an Azure Bot Service.",
+            "fullDescription": "This is a Microsoft Teams application named \"NPM Search Connector\". It serves as a Message Extension that allows users to perform a quick search to the NPM Registry for a package and insert package details into conversations for sharing with co-workers. The application uses Adaptive Cards to render NPM package details and Azure Bot Service for handling search queries and communication between the server workload and the clients, including Teams and Outlook (Web Client). It relies on external dependencies such as the botbuilder and restify libraries. The application is built using the TeamsFx SDK and leverages cloud services like Azure Active Directory and Azure Bot Service. While it doesn't directly involve Tabs, JS, SSO, or the Graph Toolkit, these could potentially be integrated for enhanced functionality.",
             "types": [
                 "Message Extension"
             ],
@@ -175,7 +175,7 @@
             "onboardDate": "2022-08-01",
             "title": "Proactive Messaging",
             "shortDescription": "Demonstrates how to send proactive messages to users.",
-            "fullDescription": "This is a sample which shows how to save user's conversation reference information to send proactive reminder message using Bots.",
+            "fullDescription": "This Teams application is a proactive messaging bot that enables users to receive notifications and messages proactively. The bot can send messages to all users who have previously interacted with it, and it can be triggered via a dedicated endpoint. The bot is built using the Bot Framework SDK and is written in JavaScript. The bot is hosted on Azure and uses Azure Active Directory for identity management.",
             "types": [
                 "Bot"
             ],
@@ -201,7 +201,7 @@
             "onboardDate": "2022-03-28",
             "title": "Adaptive Card Notification",
             "shortDescription": "Demonstrates how to send adaptive card notification to users.",
-            "fullDescription": "This is a sample which shows how to send notification with different adaptive cards using Bots.",
+            "fullDescription": "Adaptive Card Notification provides an easy way to send notification in Teams. The front end is built with Adaptive Cards to render notification details, the bot framework service is an Azure Bot Service handling search queries and communication between the server workload and the client and the backend is hosted in Azure Functions providing notification trigger and message handler.",
             "types": [
                 "Bot"
             ],
@@ -221,7 +221,7 @@
             "onboardDate": "2022-03-31",
             "title": "Incoming Webhook Notification",
             "shortDescription": "Demonstrates how to send notification via Incoming Webhook.",
-            "fullDescription": "This is a sample which shows how to send notification via Incoming Webhook in Microsoft Teams channels.",
+            "fullDescription": "This is a Microsoft Teams application that enables users to send adaptive cards to Teams channels via incoming webhooks. The main user scenario involves tracking and notifying events in Teams channels. The application relies on Node.js and requires a Teams Channel to function. It doesn't use any specific cloud services, but the webhooks could be triggered from any cloud-based application.",
             "types": [
                 "Bot"
             ],
@@ -283,7 +283,7 @@
             "onboardDate": "2022-09-20",
             "title": "Team Central Dashboard",
             "shortDescription": "A single dashboard displaying data chats and content from Microsoft Graph to accelerate team collaboration and personal productivity.",
-            "fullDescription": "A single dashboard displaying data chats and content from Microsoft Graph to accelerate team collaboration and personal productivity.",
+            "fullDescription": "This project is a Microsoft Teams application that provides a Tab interface for users to interact with. The main scenario involves users accessing various functionalities through this Tab, which is built using the Microsoft Teams JavaScript client SDK. The application supports Single Sign-On (SSO) for a seamless user experience. It also utilizes the Microsoft Graph Toolkit, enabling easy integration with the Microsoft Graph APIs. The application is hosted on Azure, leveraging its cloud services for robust and scalable performance.",
             "types": [
                 "Tab"
             ],
@@ -305,7 +305,7 @@
             "onboardDate": "2022-04-18",
             "title": "Graph Connector App",
             "shortDescription": "Showcases how to build custom Graph Connector",
-            "fullDescription": "This sample app showcases how to build custom Graph Connector with Azure Functions and query data using Microsoft Graph Client and TeamsFx SDK.",
+            "fullDescription": "This project is a Microsoft Teams application that provides a custom Graph Connector built with Azure Functions. The main user scenario involves querying data using the Microsoft Graph Client and TeamsFx SDK. The application can build both frontend and backend hosting on Azure for a Teams tab app, and it uses Single Sign-On (SSO) for authentication. It leverages the Microsoft Graph Toolkit for UI components related to Microsoft Graph. The application is dependent on Azure Functions for serverless computing and Azure Active Directory for identity services. It also uses the TeamsFx SDK to facilitate the development of Teams applications. The application is designed to be deployed on Azure, utilizing its cloud services for hosting and data management.",
             "types": [
                 "Tab"
             ],
@@ -394,7 +394,7 @@
             "onboardDate": "2023-03-02",
             "title": "Hello World Teams Tab and Outlook add-in",
             "shortDescription": "A hello world project that contains both Teams Tab and Outlook add-in capability",
-            "fullDescription": "A hello world project that contains both Teams Tab and Outlook add-in capability",
+            "fullDescription": "Microsoft Teams supports the ability to run web-based UI inside \"custom tabs\" that users can install either for just themselves (personal tabs) or within a team or group chat context. Outlook add-ins are integrations built by third parties into Outlook by using our web-based platform. Now you have the ability to create a single unit of distribution for all your Microsoft 365 extensions by using the same manifest format and schema, based on the current JSON-formatted Teams manifest.",
             "types": [
                 "Tab"
             ],
