--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -796,7 +796,7 @@
             "onboardDate": "2024-04-02",
             "title": "Containerized Hello World Tab with Backend",
             "shortDescription": "A containerized Hello World app of Microsoft Teams Tab app which has a backend service.",
-            "fullDescription": "Hello World Tab with Backend shows you how to build a tab app with an Azure Function as backend, how to get user login information with SSO and how to call Azure Function from frontend tab.",
+            "fullDescription": "Hello World Tab with Backend shows you how to build a tab app with an Azure Function as backend, how to get user login information with SSO and how to call Azure Function from frontend tab. Teams applications can be developed and run locally using containerization, which provides a consistent and isolated environment for testing and deployment. Containerizing your Teams app makes it easier to manage dependencies, scale efficiently, and maintain your app in production.",
             "types": [
               "Tab"
             ],
