fix: use latest version of teams chef bot sample

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -501,8 +501,8 @@
             "downloadUrlInfo": {
                 "owner": "microsoft",
                 "repository": "teams-ai",
-                "ref": "js-1.1.1",
-                "dir": "js/samples/04.ai.a.teamsChefBot"
+                "ref": "main",
+                "dir": "js/samples/04.ai-apps/a.teamsChefBot"
             }
         },
         {
