fix: fix bug in sso tab

--- a/hello-world-tab-with-backend/teamsapp.local.yml
+++ b/hello-world-tab-with-backend/teamsapp.local.yml
@@ -96,6 +96,8 @@ deploy:
         BROWSER: none
         HTTPS: true
         PORT: 53000
+        SSL_CRT_FILE: ${{SSL_CRT_FILE}}
+        SSL_KEY_FILE: ${{SSL_KEY_FILE}}
         REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
         REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
         REACT_APP_FUNC_NAME: ${{FUNC_NAME}}
