--- a/developer-assist-dashboard/teamsapp.local.yml
+++ b/developer-assist-dashboard/teamsapp.local.yml
@@ -31,7 +31,7 @@ provision:
   - uses: script # Set TAB_DOMAIN and TAB_ENDPOINT for local launch
     with:
       run:
-        echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000";
+        echo "::set-teamsfx-env TAB_DOMAIN=localhost";
         echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:53000";
         echo "::set-teamsfx-env FUNC_NAME=callService";
         echo "::set-teamsfx-env FUNC_ENDPOINT=http://localhost:7071";
