fix Update manifest.json

--- a/large-scale-notification/appPackage/manifest.json
+++ b/large-scale-notification/appPackage/manifest.json
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "large-scale-notifi-${{TEAMSFX_ENV}}",
+    "short": "large-scale-notifi${{TEAMSFX_ENV}}",
     "full": "full name for large-scale-notification"
   },
   "description": {
