--- a/share-now/teamsapp.yml
+++ b/share-now/teamsapp.yml
@@ -12,7 +12,8 @@ provision:
       name: share-now-aad # Note: when you run aadApp/update, the AAD app name will be updated based on the definition in manifest. If you don't want to change the name, make sure the name in AAD manifest is the same with the name defined here.
       generateClientSecret: true # If the value is false, the action will not generate client secret for you
       signInAudience: "AzureADMyOrg" # Authenticate users with a Microsoft work or school account in your organization's Azure AD tenant (for example, single tenant).
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       clientId: AAD_APP_CLIENT_ID
       clientSecret: SECRET_AAD_APP_CLIENT_SECRET # Environment variable that starts with `SECRET_` will be stored to the .env.{envName}.user environment file
       objectId: AAD_APP_OBJECT_ID
@@ -150,11 +151,6 @@ deploy:
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       dotnetPath: DOTNET_PATH
-  - uses: cli/runDotnetCommand
-    with:
-      workingDirectory: api
-      args: build extensions.csproj -o bin --ignore-failed-sources
-      execPath: ${{DOTNET_PATH}}
   - uses: cli/runNpmCommand
     with:
       workingDirectory: api
@@ -209,3 +205,4 @@ publish:
     # the specified environment variable(s).
     writeToEnvironmentFile:
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: 8c90066a-c848-461d-8053-97fdda30e83e
