refactor: add a new env variable for the tab valid domain

--- a/hello-world-in-meeting/appPackage/manifest.json
+++ b/hello-world-in-meeting/appPackage/manifest.json
@@ -50,7 +50,7 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "${{TAB_DOMAIN}}"
+        "${{TAB_HOSTNAME}}"
     ],
     "showLoadingIndicator": false
 }
