--- a/hello-world-bot-with-tab/appPackage/manifest.json
+++ b/hello-world-bot-with-tab/appPackage/manifest.json
@@ -74,7 +74,7 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "${{TAB_DOMAIN}}",
+        "${{TAB_HOSTNAME}}",
         "${{BOT_DOMAIN}}"
     ],
     "showLoadingIndicator": false
