--- a/share-now/teamsapp.local.yml
+++ b/share-now/teamsapp.local.yml
@@ -143,6 +143,7 @@ deploy:
       envs:
         BOT_ID: ${{BOT_ID}}
         BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
+        BOT_TYPE: 'MultiTenant'
         SQL_ENDPOINT: ${{SQL_ENDPOINT}}
         SQL_DATABASE_NAME: ${{SQL_DATABASE_NAME}}
         SQL_USER_NAME: ${{SQL_USER_NAME}}
