--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -25,6 +25,7 @@
     "@azure/storage-blob": "^12.9.0",
     "@azure/identity": "^4.4.0",
     "adaptivecards-templating": "^2.3.1",
+    "adaptive-expressions": "^4.22.3",
     "@microsoft/teamsfx": "^2.0.0",
     "botbuilder": "^4.18.0"
   },
