--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -24,12 +24,14 @@
   "dependencies": {
     "@azure/storage-blob": "^12.9.0",
     "@azure/identity": "^4.4.0",
-    "@microsoft/adaptivecards-tools": "^1.0.0",
+    "adaptivecards-templating": "^2.3.1",
+    "adaptive-expressions": "^4.22.3",
     "@microsoft/teamsfx": "^2.0.0",
     "botbuilder": "^4.18.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@types/json-schema": "^7.0.15",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^14.0.0",
