fix: add config in api/tsconfig.json

--- a/hello-world-tab-docker/api/tsconfig.json
+++ b/hello-world-tab-docker/api/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
+    "esModuleInterop": true,  
+    "allowSyntheticDefaultImports": true,  
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": true,
