fix: build error for sharenow

--- a/share-now/api/tsconfig.json
+++ b/share-now/api/tsconfig.json
@@ -6,6 +6,8 @@
     "rootDir": ".",
     "sourceMap": true,
     "strict": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "nodenext",
   }
 }
